style: fix spacing of latest posts on mobile view

--- a/src/components/LatestPosts/LatestPosts.module.css
+++ b/src/components/LatestPosts/LatestPosts.module.css
@@ -29,6 +29,7 @@
   .postsContainer {
     grid-template-columns: repeat(1, 1fr);
     max-width: 700px;
+    gap: 16px;
   }
 
   .latestTextContainer {
